--- a/RemindAlarm/app/src/main/AndroidManifest.xml
+++ b/RemindAlarm/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.RemindAlarm"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.notice.ReminderNoticeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.RemindAlarm.NoActionBar" />
+        <activity
             android:name=".presentation.ui.main.ReminderActivity"
             android:exported="true">
             <intent-filter>
